2003-10-31  Richard Henderson  <rth@redhat.com>

        * cppcharset.c (one_utf8_to_utf16): Initialize 's' to silence warning.

2003-10-29  Richard Henderson  <rth@redhat.com>

        * fold-const.c (fold_single_bit_test): Convert the input to the
        operational intermediate type.

2003-10-26  Richard Henderson  <rth@redhat.com>

        * config/alpha/alpha.md (attr cannot_copy): New.
        (call_osf_2_er, call_value_osf_2_er, ldgp_er_1, ldgp_er_2,
        prologue_ldgp_er_2, prologue_ldgp_1): Set it.
        * config/alpha/alpha.c (alpha_cannot_copy_insn_p): Test it.

2003-10-26  Ottavio Campana <ottavio@campana.vi.it>

	PR target/12690
	* config/i386/mmintrin.h (_mm_set1_pi8): Fix comment.

2003-10-26  Gunther Nikl  <gni@gecko.de>

	* config/m68k/m68k.c (m68k_output_function_prologue): Move front
	comment from here to...
	(m68k_save_reg): ...here. Fix comment formatting.
	(m68k_output_function_prologue): Fix comment formatting.
	(m68k_output_function_epilogue): Likewise.
	(const_method): Likewise.

2003-10-26  Kazu Hirata  <kazu@cs.umass.edu>

	* toplev.c (default_get_pch_validity): Guard the use of
	target_options with #ifdef TARGET_OPTIONS.
	(default_pch_valid_p): Likewise.

2003-10-26  Andreas Jaeger  <aj@suse.de>
	    Zack Weinberg  <zack@codesourcery.com>
	    Andreas Tobler <toa@pop.agri.ch>

	* dwarf2out.c (output_cfi): Use HOST_WIDE_INT_PRINT.
	(output_die): Likewise.
	(print_die): Likewise.

2003-10-26  Andreas Jaeger  <aj@suse.de>

	* tree.h (dwarf2out_def_cfa, dwarf2out_args_size,
	dwarf2out_reg_save, new_loc_descr): Update prototypes for recent
	dwarf2out.c change.

	* toplev.c (default_pch_valid_p): Fix warning.

2003-10-25  Roger Sayle  <roger@eyesopen.com>

	* simplify-rtx.c (simplify_replace_rtx): Avoid allocating duplicate
	RTL nodes.  If an operator's operands are unchanged, return the
	original argument unchanged.

2003-10-26  Graham Stott  <graham.stott@btinternet.com>

	Fix bootstrap failure.